[package]
name = "RustAdventOfCode"
version = "0.1.0"
authors = ["David Campion <David.Campion@walmartlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuple = "0.5.0"
tuple-conv = "1.0.1"
itertools = "0.9.0"
regex = "1.4.2"
